adds the calculator's buttons

--- a/index.html
+++ b/index.html
@@ -14,32 +14,34 @@
 
         <div class="buttons-surface">
           <div class="first-column">
-            <div class="bt-1">1</div>
-            <div class="bt-4">4</div>
-            <div class="bt-7">7</div>
-            <div class="bt-A">,</div>
+            <div id="bt-1">1</div>
+            <div id="bt-4">4</div>
+            <div id="bt-7">7</div>
+            <div id="bt-A">,</div>
           </div>
           <div class="second-column">
-            <div class="bt-2">2</div>
-            <div class="bt-5">5</div>
-            <div class="bt-8">8</div>
-            <div class="bt-0">0</div>
+            <div id="bt-2">2</div>
+            <div id="bt-5">5</div>
+            <div id="bt-8">8</div>
+            <div id="bt-0">0</div>
           </div>
           <div class="third-column">
-            <div class="bt-3">3</div>
-            <div class="bt-6">6</div>
-            <div class="bt-9">9</div>
-            <div class="bt-equals">=</div>
-            <div class="bt-C">C</div>
+            <div id="bt-3">3</div>
+            <div id="bt-6">6</div>
+            <div id="bt-9">9</div>
+            <div id="bt-equals">=</div>
+            <div id="bt-C">C</div>
           </div>
           <div class="fourth-column">
-            <div class="bt-plus">+</div>
-            <div class="bt-less">-</div>
-            <div class="bt-mult">*</div>
-            <div class="bt-divi">/</div>
+            <div id="bt-plus">+</div>
+            <div id="bt-less">-</div>
+            <div id="bt-mult">*</div>
+            <div id="bt-divi">/</div>
           </div>
         </div>
       </div>
     </div>
+
+    <script type="text/javascript" src="./js/button-script.js"></script>
   </body>
 </html>
